--- a/contact.html
+++ b/contact.html
@@ -45,22 +45,22 @@
               <div class="d-flex align-items-center justify-content-between gap-lg-5 gap-2 flex-wrap p-2">
                   <div class="d-flex align-items-center gap-1">
                       <i class="ph ph-phone"></i>
-                      <a href="tel: +91 9408828700" class="font-size-12 text-white">+91 9408828700</a>
+                      <a href="tel: +91 9408828700" class="font-size-12 text-white cursor-pointer">+91 9408828700</a>
                   </div>
                   <div class="d-flex align-items-center gap-2">
-                      <a href="https://www.instagram.com/marvelcreation.in/" class="icon text-white" target="_blank" rel="noopener noreferrer">
+                      <a href="https://www.instagram.com/marvelcreation.in/" class="icon text-white cursor-pointer" target="_blank">
                           <i class="ph ph-instagram-logo"></i>
                       </a>
-                      <a href="https://www.youtube.com/c/marvelcreationin" class="icon text-white" target="_blank" rel="noopener noreferrer">
+                      <a href="https://www.youtube.com/c/marvelcreationin" class="icon text-white cursor-pointer" target="_blank">
                           <i class="ph ph-youtube-logo"></i>
                       </a>
-                      <a href="https://m.facebook.com/marvelcreation.in" class="icon text-white" target="_blank" rel="noopener noreferrer">
+                      <a href="https://m.facebook.com/marvelcreation.in" class="icon text-white cursor-pointer" target="_blank">
                           <i class="ph ph-facebook-logo"></i>
                       </a>
-                      <a href="https://wa.me/message/LEY5GTASPWF7I1" class="icon text-white" target="_blank" rel="noopener noreferrer">
+                      <a href="https://wa.me/message/LEY5GTASPWF7I1" class="icon text-white cursor-pointer" target="_blank">
                           <i class="ph ph-whatsapp-logo"></i>
                       </a>
-                      <a href="https://maps.app.goo.gl/gRncKCc9arAY29yP7" class="icon text-white" target="_blank" rel="noopener noreferrer">
+                      <a href="https://maps.app.goo.gl/gRncKCc9arAY29yP7" class="icon text-white cursor-pointer" target="_blank">
                           <i class="ph ph-map-pin-line"></i>
                       </a>
                   </div>
@@ -86,8 +86,10 @@
                       </div>
                   </div>
   
-                  <nav id="navbar_main"
-                      class="offcanvas mobile-offcanvas nav navbar navbar-expand-xl hover-nav horizontal-nav py-xl-0">
+              <nav id="navbar_main"
+       class="offcanvas offcanvas-start mobile-offcanvas nav navbar navbar-expand-xl hover-nav horizontal-nav py-xl-0"
+       tabindex="-1"
+       aria-labelledby="offcanvasNavbarLabel">
                       <div class="container-fluid p-0">
                           <div class="offcanvas-header">
                               <div class="navbar-brand p-0">
@@ -435,7 +437,8 @@
     <script src="./assets/js/plugins/fslightbox.js?v=1.0.0" defer></script>
     <!-- Slick Slider Script -->
     <script src="./assets/vendor/slick-slider/slick.min.js"></script>
-    <script src="./assets/vendor/video/video.min.js"></script>
-    <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
-    <script src="./assets/js/marvel-creation.js" defer></script>  </body>
+    <script src="assets/vendor/video/video.min.js"></script>
+    <script src="assets/vendor/videojs-youtube-master/youtube.js"></script>
+    <script src="assets/vendor/video/video-player.js"></script>
+    <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
