--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,6 @@
       <meta name="google_font_api" content="AIzaSyCyvrK6mkEqTF7m4iaUg30nyKi3EJe5dMo">
       
       <!-- Favicon -->
-      <link rel="shortcut icon" href="./assets/images/favicon.ico" />
       
       <!-- Library / Plugin Css Build -->
       <link rel="stylesheet" href="./assets/css/core/libs.min.css" />
@@ -427,8 +426,8 @@
     <script src="./assets/js/plugins/fslightbox.js?v=1.0.0" defer></script>
     <!-- Slick Slider Script -->
     <script src="./assets/vendor/slick-slider/slick.min.js"></script>
-    <script src="assets/vendor/video/video.min.js"></script>
-    <script src="assets/vendor/videojs-youtube-master/youtube.js"></script>
-    <script src="assets/vendor/video/video-player.js"></script>
+    <script src="./assets/vendor/video/video.min.js"></script>
+    <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
+    <script src="./assets/vendor/video/video-player.js"></script>
     <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
