--- a/index.html
+++ b/index.html
@@ -152,142 +152,57 @@
   </header>      <div class="main-content">
 <!-- ================= Banner Slider ================= -->
 <div class="overflow-hidden">
-  <div class="banner-section-wrapper">
-    <div class="main-banner">
-      <div class="slick-banner main-slider">
-
-        <!-- Banner 1 -->
-        <div class="slick-item banner-bg m-0" style="background-image: url(./assets/images/banner.webp)">
-          <div class="container-fluid position-relative">
-            <div class="row align-items-center h-100 slider-content-full-height gy-4">
-              <div class="col-lg-6 col-md-12 col-xl-5">
-                <h2 class="texture-text big-font letter-spacing-1 text-capitalize">Krishna</h2>
-                <p class="my-3">In the vibrant land of Vrindavan, Krishna: Portrait unfolds...</p>
-                <div class="trending-list">
-                  <div class="text-primary genres font-size-14 mb-1">Genres:
-                    <a href="#" class="fw-normal text-decoration-none text-body">Pre Wedding,</a>
-                  </div>
-                  <div class="text-primary tag font-size-14">Tag:
-                    <a href="#" class="fw-normal text-decoration-none text-body">Couple,</a>
-                    <a href="#" class="fw-normal text-decoration-none text-body">Adventure,</a>
-                    <a href="#" class="fw-normal text-decoration-none text-body">Romance</a>
-                  </div>
+  <div class="main-banner">
+    <div class="slick-banner main-slider">
+      <!-- Banner 1 -->
+      <div class="slick-item banner-bg m-0" style="background-image: url(./assets/images/banner.webp)">
+        <div class="container-fluid position-relative">
+          <div class="row align-items-center h-100 content-full-height gy-4">
+            <div class="col-lg-6 col-md-12 col-xl-5">
+              <h2 class="text-white letter-spacing-1 text-capitalize">Krishna</h2>
+              <p class="my-3">In the vibrant land of Vrindavan, Krishna: Portrait unfolds...</p>
+              <div class="trending-list">
+                <div class="text-primary tag font-size-14 mb-1">Tags:
+                  <a href="#" class="fw-normal text-decoration-none text-body">Pre Wedding,</a>
+                  <a href="#" class="fw-normal text-decoration-none text-body">Couple,</a>
+                  <a href="#" class="fw-normal text-decoration-none text-body">Adventure,</a>
+                  <a href="#" class="fw-normal text-decoration-none text-body">Romance</a>
                 </div>
-                <a href="https://wa.me/message/LEY5GTASPWF7I1" class="btn btn-primary">Book Now</a>
               </div>
+              <a href="https://wa.me/message/LEY5GTASPWF7I1" class="btn btn-primary">Book Now</a>
+            </div>
 
-              <div class="col-xl-7 col-lg-6 col-md-12 trailor-video">
-                <a data-fslightbox="html5-video"
-                   href="https://www.youtube.com/watch?v=rLgy3eDsi-0"
-                   class="video-open playbtn text-decoration-none">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 213.7 213.7">
-                    <polygon class="triangle" fill="none" stroke-width="7" points="73.5,62.5 148.5,105.8 73.5,149.1"></polygon>
-                    <circle class="circle" fill="none" stroke-width="7" cx="106.8" cy="106.8" r="103.3"></circle>
-                  </svg>
-                  <span class="w-trailor text-uppercase">Watch Trailer</span>
-                </a>
-                <video id="my-video-1" class="my-video video-js vjs-big-play-centered w-100 d-none"
-                       loop autoplay preload="auto"
-                       data-setup='{
+            <div class="col-xl-7 col-lg-6 col-md-12 creatiix-trailor-video">
+              <a data-fslightbox="html5-video" href="https://www.youtube.com/watch?v=rLgy3eDsi-0"
+                class="video-open playbtn text-decoration-none">
+                <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 213.7 213.7">
+                  <polygon class="triangle" fill="none" stroke-width="7" points="73.5,62.5 148.5,105.8 73.5,149.1">
+                  </polygon>
+                  <circle class="circle" fill="none" stroke-width="7" cx="106.8" cy="106.8" r="103.3"></circle>
+                </svg>
+                <span class="w-trailor text-uppercase">Watch Trailer</span>
+              </a>
+              <video id="my-video" class="my-video video-js vjs-big-play-centered w-100 d-none" loop autoplay
+                preload="auto" data-setup='{
                          "techOrder": ["youtube"],
                          "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=rLgy3eDsi-0" }],
                          "youtube": { "modestbranding": 1, "rel": 0, "autoplay": 1 },
                          "fullscreen": true
                        }'>
-                </video>
-              </div>
+              </video>
             </div>
           </div>
         </div>
-
-        <!-- Banner 2 -->
-        <div class="slick-item banner-bg m-0" style="background-image: url(./assets/images/banner.webp)">
-          <div class="container-fluid position-relative">
-            <div class="row align-items-center h-100 slider-content-full-height gy-4">
-              <div class="col-lg-6 col-md-12 col-xl-5">
-                <h2 class="texture-text big-font letter-spacing-1 text-capitalize">Krishna DS</h2>
-                <p class="my-3">Another banner content goes here...</p>
-                <a href="https://wa.me/message/LEY5GTASPWF7I1" class="btn btn-primary">Book Now</a>
-              </div>
-              <div class="col-xl-7 col-lg-6 col-md-12 trailor-video">
-                <a data-fslightbox="html5-video"
-                   href="https://www.youtube.com/watch?v=rLgy3eDsi-0"
-                   class="video-open playbtn text-decoration-none">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 213.7 213.7">
-                    <polygon class="triangle" fill="none" stroke-width="7" points="73.5,62.5 148.5,105.8 73.5,149.1"></polygon>
-                    <circle class="circle" fill="none" stroke-width="7" cx="106.8" cy="106.8" r="103.3"></circle>
-                  </svg>
-                  <span class="w-trailor text-uppercase">Watch Trailer</span>
-                </a>
-                <video id="my-video-2" class="my-video video-js vjs-big-play-centered w-100 d-none"
-                       loop autoplay preload="auto"
-                       data-setup='{
-                         "techOrder": ["youtube"],
-                         "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=rLgy3eDsi-0" }],
-                         "youtube": { "modestbranding": 1, "rel": 0, "autoplay": 1 },
-                         "fullscreen": true
-                       }'>
-                </video>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Add more banners here if needed -->
-
       </div>
+
+      <!-- Banner 2 -->
+
+      <!-- Add more banners here if needed -->
+
     </div>
   </div>
 </div>
 <!-- ================= /Banner Slider ================= --><div class="section-padding">
-    <div class="container">
-        <div class="section-title text-center">
-            <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Our
-                Specialties</span>
-            <h5 class="title">From intimate portraits to grand celebrations,</br> we capture life's most meaningful
-                moments.</h5>
-        </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <div class="col">
-                <div class="specialty-item position-relative">
-                    <img src="./assets/images/banner.webp" alt="Specialty 1" class="img-fluid specialty-img">
-                    <div class="position-absolute bottom-0 p-3 info">
-                        <h5 class="text-white">Wedding</h5>
-                        <p class="m-0 font-size-14 text-white">Timeless moments of love and celebration.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="specialty-item position-relative">
-                    <img src="./assets/images/banner.webp" alt="Specialty 1" class="img-fluid specialty-img">
-                    <div class="position-absolute bottom-0 p-3 info">
-                        <h5 class="text-white">Portrait</h5>
-                        <p class="m-0 font-size-14 text-white">Professional portraits that capture personality</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="specialty-item position-relative">
-                    <img src="./assets/images/banner.webp" alt="Specialty 1" class="img-fluid specialty-img">
-                    <div class="position-absolute bottom-0 p-3 info">
-                        <h5 class="text-white">Fashion</h5>
-                        <p class="m-0 font-size-14 text-white">Editorial and commercial fashion photography</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="specialty-item position-relative">
-                    <img src="./assets/images/banner.webp" alt="Specialty 1" class="img-fluid specialty-img">
-                    <div class="position-absolute bottom-0 p-3 info">
-                        <h5 class="text-white">Nature</h5>
-                        <p class="m-0 font-size-14 text-white">Breathtaking landscapes and natural beauty</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="section-padding">
     <div class="container">
         <div class="section-title text-center">
             <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Portfolio
@@ -309,7 +224,6 @@
                                         Wedding</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
                 <div class="slick-slide">
@@ -325,7 +239,6 @@
                                         Picture</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
                 <div class="slick-slide">
@@ -341,7 +254,6 @@
                                         Candid Moments</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
                 <div class="slick-slide">
@@ -357,7 +269,6 @@
                                         Team Management Tools</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
                 <div class="slick-slide">
@@ -373,7 +284,6 @@
                                         Strategic Portfolio Management</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
                 <div class="slick-slide">
@@ -389,14 +299,47 @@
                                         Scalable PPM Software</h5>
                                 </a>
                             </div>
-                            <a href="./photography.html" class="btn btn-primary flex-shrink-0 p-3">View All</a>
                         </div>
                     </div>                </div>
             </div>
         </div>
     </div>
 </div>
-<section class="section-padding section-bg">
+<div class="section-padding">
+    <div class="container">
+        <div class="section-title text-center">
+            <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Signature
+                Portfolio</span>
+            <h4 class="title">A glimpse of creativity captured through our lens, straight from our Portfolio.</h4>
+        </div>
+        <div class="row align-items-center justify-content-center">
+            <div class="col-lg-10">
+                <div class="films-trailer-container d-inline-block rounded-3 overflow-hidden">
+                    <div class="films-trailer position-relative rounded-3 overflow-hidden">
+                        <img src="./assets/images/banner.webp" class="trailer-image" alt="trailer-image">
+                        <a data-fslightbox="html5-video"
+                            href="https://www.youtube.com/watch?time_continue=4&v=rLgy3eDsi-0&embeds_referring_euri=http%3A%2F%2Flocalhost%3A3000%2F&source_ve_path=MjM4NTE"
+                            class="video-open playbtn text-decoration-none" tabindex="0">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="80px" height="80px"
+                                viewBox="0 0 213.7 213.7" enable-background="new 0 0 213.7 213.7" xml:space="preserve">
+                                <polygon class="triangle" fill="none" stroke-width="7" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-miterlimit="10"
+                                    points="73.5,62.5 148.5,105.8 73.5,149.1 ">
+                                </polygon>
+                                <circle class="circle" fill="none" stroke-width="7" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-miterlimit="10" cx="106.8" cy="106.8" r="103.3">
+                                </circle>
+                            </svg>
+                            <span class="w-trailor text-uppercase"> Watch Trailer </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<section class="section-padding">
     <div class="container">
         <div class="section-title text-center">
             <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">What Our Customers Say</span>
@@ -539,46 +482,12 @@
         </div>
 </section>
 <div class="section-padding">
-    <div class="container">
-        <div class="section-title text-center">
-            <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Signature
-                Portfolio</span>
-            <h4 class="title">A glimpse of creativity captured through our lens, straight from our Portfolio.</h4>
-        </div>
-        <div class="row align-items-center justify-content-center">
-            <div class="col-lg-10">
-                <div class="tab-watch-trailer-container d-inline-block rounded-3 overflow-hidden">
-                    <div class="tab-watch-trailer position-relative rounded-3 overflow-hidden">
-                        <img src="./assets/images/banner.webp" class="trailer-image" alt="trailer-image">
-                        <a data-fslightbox="html5-video"
-                            href="https://www.youtube.com/watch?time_continue=4&v=rLgy3eDsi-0&embeds_referring_euri=http%3A%2F%2Flocalhost%3A3000%2F&source_ve_path=MjM4NTE"
-                            class="video-open playbtn text-decoration-none" tabindex="0">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="80px" height="80px"
-                                viewBox="0 0 213.7 213.7" enable-background="new 0 0 213.7 213.7" xml:space="preserve">
-                                <polygon class="triangle" fill="none" stroke-width="7" stroke-linecap="round"
-                                    stroke-linejoin="round" stroke-miterlimit="10"
-                                    points="73.5,62.5 148.5,105.8 73.5,149.1 ">
-                                </polygon>
-                                <circle class="circle" fill="none" stroke-width="7" stroke-linecap="round"
-                                    stroke-linejoin="round" stroke-miterlimit="10" cx="106.8" cy="106.8" r="103.3">
-                                </circle>
-                            </svg>
-                            <span class="w-trailor text-uppercase"> Watch Trailer </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="section-padding">
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="bg-secondary-subtle rounded p-3 p-lg-5">
-                    <h5 class="text-white mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
-                    <p class="mb-0 text-white text-center">Ready to create beautiful memories? Don't wait – the
+                <div class="bg-purple rounded p-3 p-lg-5">
+                    <h5 class="text-black mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
+                    <p class="mb-0 text-center">Ready to create beautiful memories? Don't wait – the
                         perfect
                         moment is now.<br> Let's schedule your photography session and bring your vision to life.
                     </p>
@@ -590,8 +499,7 @@
             </div>
         </div>
     </div>
-</div>
-      </div>
+</div>      </div>
   <footer>
     <div class="container">
       <div class="footer-inner-content">
@@ -665,9 +573,9 @@
     </div>
     <div class="row justify-content-center py-5 border-top">
       <div class="col-md-8 m-auto">
-        <h6 class="mb-0 mt-md-0 mt-3 ttext-heading fw-medium">Copyright ©
+        <h6 class="mb-0 mt-md-0 mt-3 text-white">Copyright ©
           <script>document.write(new Date().getFullYear())</script> Marvel Creation. All Rights Reserved. &amp; Designed &
-          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatixDesign.</span>
+          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatiixDesign.</span>
         </h6>
       </div>
     </div>
@@ -690,6 +598,7 @@
     <script src="./assets/vendor/slick-slider/slick.min.js"></script>
     <script src="./assets/vendor/video/video.min.js"></script>
     <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
+    <script src="./assets/vendor/video/videojs.hotkeys.min.js"></script>
     <script src="./assets/vendor/video/video-player.js"></script>
     <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
