--- a/films.html
+++ b/films.html
@@ -151,7 +151,7 @@
       </nav>
   </header>      <div class="main-content">
 <section class="section-padding ">
-    <div class="playlist-detail-page">
+    <div class="films-detail-page">
         <div class="container-fluid">
             <div class="section-title text-center">
                 <span
@@ -162,40 +162,40 @@
             <div class="row flex-row-reverse">
                 <div class="col-xxl-3 col-xl-4 col-lg-5">
 
-                    <div class="card border-0">
+                    <div class="bg-gray-800 rounded overflow-hidden">
                         <div
-                            class="card-header pb-3 mb-3 border-bottom d-flex align-items-center justify-content-between gap-1">
+                            class="p-3 mb-3 border-bottom d-flex align-items-center justify-content-between gap-1">
                             <h5 class="m-0">Maravel Films</h5>
                         </div>
 
-                        <div class="card-body px-0 pt-0 pb-3">
-                            <div class="playlist-data">
+                        <div class="px-0 pt-0 pb-3">
+                            <div class="films-data">
                                 <ul class="nav nav-pills d-flex align-items-center justify-content-center column-gap-3 row-gap-2 flex-wrap"
                                     role="tablist">
-                                    <li class="playlist-data-card active nav-link" data-bs-toggle="pill"
+                                    <li class="films-data-card active nav-link rounded" data-bs-toggle="pill"
                                         href="#birthday-video">
-                                        <div class="playlist-data-card-image">
+                                        <div class="films-data-card-image">
                                             <a href="#">
                                                 <img src="./assets/images/img-2.jpeg" alt="Marriage"
                                                     class="img-fluid object-cover w-100 border-0">
                                             </a>
                                         </div>
-                                        <div class="playlist-data-card-content">
-                                            <h6 class="mt-0 mb-2 line-count-2 playlist-data-title">
+                                        <div class="films-data-card-content">
+                                            <h6 class="mt-0 mb-2 line-count-2 films-data-title">
                                                 <a href="#">Marriage Diary</a>
                                             </h6>
 
                                         </div>
                                     </li>
-                                    <li class="playlist-data-card nav-link" data-bs-toggle="pill" href="#mariage-video">
-                                        <div class="playlist-data-card-image">
+                                    <li class="films-data-card nav-link rounded" data-bs-toggle="pill" href="#mariage-video">
+                                        <div class="films-data-card-image">
                                             <a href="#">
                                                 <img src="./assets/images/img-3.jpeg" alt="engagement"
                                                     class="img-fluid object-cover w-100 border-0">
                                             </a>
                                         </div>
-                                        <div class="playlist-data-card-content">
-                                            <h6 class="mt-0 mb-2 line-count-2 playlist-data-title">
+                                        <div class="films-data-card-content">
+                                            <h6 class="mt-0 mb-2 line-count-2 films-data-title">
                                                 <a href="#">Engagement</a>
                                             </h6>
                                         </div>
@@ -210,7 +210,7 @@
                     <!-- Tab panes -->
                     <div class="tab-content mt-5">
                         <div id="birthday-video" class="container tab-pane active">
-                            <div class="playlist-main-banner position-relative mb-3">
+                            <div class="films-main-banner position-relative mb-3">
                                 <div class="video-container"></div>
                                 <iframe
                                     src="https://www.youtube.com/embed/EIbu9qQw7TM?autoplay=1&mute=1&loop=1&playlist=EIbu9qQw7TM"
@@ -219,57 +219,30 @@
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                 </iframe>
                             </div>
-                            <div id="streamit_player_container"
+                            <div
                                 class="trending-info d-flex justify-content-between align-items-center gap-4">
                                 <a href="#">
                                     <h4 class="my-2 fw-bold">Birthday</h4>
                                 </a>
-                                <ul class="actions-playlist list-inline my-2 p-0 d-flex gap-2 justify-content-md-end">
-                                    <li class="position-relative share-button dropend dropdown">
-                                        <button type="button" class="btn btn-link p-0 action-btn" data-bs-toggle="modal"
-                                            data-bs-target="#shareModal">
-                                            <span class="h-100 w-100 d-block" data-bs-toggle="tooltip"
-                                                data-bs-placement="top" data-bs-title="Share">
-                                                <i class="ph ph-share-network h4 m-0"></i>
-                                            </span>
-                                        </button>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
                         <div id="mariage-video" class="container tab-pane fade">
                             <div class="playlist-main-banner position-relative mb-3">
                                 <div class="video-container"></div>
-                                <iframe
-                                    src="https://www.youtube.com/embed/EIbu9qQw7TM?autoplay=1&mute=1&loop=1&playlist=EIbu9qQw7TM"
-                                    title="YouTube video player" frameborder="0" height="400" width="100%"
-                                    allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                                </iframe>
+                                <iframe width="100%" height="400" src="https://www.youtube.com/embed/wzW-3I76PW4?si=4K8LYHex_04dX6l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                             <div id="streamit_player_container"
                                 class="trending-info d-flex justify-content-between align-items-center gap-4">
                                 <a href="#">
                                     <h4 class="my-2 fw-bold">Marriage</h4>
                                 </a>
-                                <ul class="actions-playlist list-inline my-2 p-0 d-flex gap-2 justify-content-md-end">
-                                    <li class="position-relative share-button dropend dropdown">
-                                        <button type="button" class="btn btn-link p-0 action-btn" data-bs-toggle="modal"
-                                            data-bs-target="#shareModal">
-                                            <span class="h-100 w-100 d-block" data-bs-toggle="tooltip"
-                                                data-bs-placement="top" data-bs-title="Share">
-                                                <i class="ph ph-share-network h4 m-0"></i>
-                                            </span>
-                                        </button>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="d-flex align-items-center justify-content-center mt-5">
-                <a href="https://www.youtube.com/c/marvelcreationin" class="btn btn-secondary">View All</a>
+                <a href="https://www.youtube.com/c/marvelcreationin" class="btn btn-secondary" target="_blank">View All</a>
             </div>
         </div>
     </div>
@@ -278,9 +251,9 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="bg-secondary-subtle rounded p-3 p-lg-5">
-                    <h5 class="text-white mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
-                    <p class="mb-0 text-white text-center">Ready to create beautiful memories? Don't wait – the
+                <div class="bg-purple rounded p-3 p-lg-5">
+                    <h5 class="text-black mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
+                    <p class="mb-0 text-center">Ready to create beautiful memories? Don't wait – the
                         perfect
                         moment is now.<br> Let's schedule your photography session and bring your vision to life.
                     </p>
@@ -292,8 +265,7 @@
             </div>
         </div>
     </div>
-</div>
-      </div>
+</div>      </div>
   <footer>
     <div class="container">
       <div class="footer-inner-content">
@@ -367,9 +339,9 @@
     </div>
     <div class="row justify-content-center py-5 border-top">
       <div class="col-md-8 m-auto">
-        <h6 class="mb-0 mt-md-0 mt-3 ttext-heading fw-medium">Copyright ©
+        <h6 class="mb-0 mt-md-0 mt-3 text-white">Copyright ©
           <script>document.write(new Date().getFullYear())</script> Marvel Creation. All Rights Reserved. &amp; Designed &
-          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatixDesign.</span>
+          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatiixDesign.</span>
         </h6>
       </div>
     </div>
@@ -389,9 +361,9 @@
     <!-- fslightbox Script -->
     <script src="./assets/js/plugins/fslightbox.js?v=1.0.0" defer></script>
     <!-- Slick Slider Script -->
-    <script src="./assets/vendor/slick-slider/slick.min.js"></script>
     <script src="./assets/vendor/video/video.min.js"></script>
     <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
+    <script src="./assets/vendor/video/videojs.hotkeys.min.js"></script>
     <script src="./assets/vendor/video/video-player.js"></script>
     <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
