--- a/photography.html
+++ b/photography.html
@@ -175,81 +175,54 @@
             <div id="all" class="container tab-pane active">
                 <div class="masonry__container">
 
-
-                    <a href="./assets/images/img-2.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-2.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-8.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-8.jpeg" alt="placeholder">
-                    </a>
-
-                    <a href="./assets/images/img-5.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-5.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-3.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-3.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-7.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-7.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
-                    </a>
+                     <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-2.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-2.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-3.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-3.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-4.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-4.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-5.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-5.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-7.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-7.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-8.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-8.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
+                                        </a>                    
                 </div>
             </div>
             <div id="marriage" class="container tab-pane fade">
                 <div class="masonry__container">
-                    <a href="./assets/images/img-8.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-8.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-5.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-5.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-3.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-3.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-7.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-7.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
-                    </a>
-                </div>
+                     <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-3.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-3.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-5.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-5.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-7.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-7.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
+                                        </a>                </div>
             </div>
-            <div id="engagement" class="container tab-pane fade">
+                 <div id="engagement" class="container tab-pane fade">
                 <div class="masonry__container">
-                    <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-8.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-8.jpeg" alt="placeholder">
-                    </a>
-
-                    <a href="./assets/images/img-6.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-6.jpeg" alt="placeholder">
-                    </a>
-                    <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
-                        <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
-                    </a>
-                </div>
+                     <a href="./assets/images/img-1.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-1.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-3.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-3.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-5.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-5.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-7.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-7.jpeg" alt="placeholder">
+                                        </a>                     <a href="./assets/images/img-9.jpeg" data-fslightbox="gallery">
+                                            <img class="masonry__item" src="./assets/images/img-9.jpeg" alt="placeholder">
+                                        </a>                </div>
             </div>
         </div>
         <button class="btn btn-primary d-block mx-auto mt-5" onclick="window.location.reload();">Load More</button>
@@ -260,9 +233,9 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="bg-secondary-subtle rounded p-3 p-lg-5">
-                    <h5 class="text-white mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
-                    <p class="mb-0 text-white text-center">Ready to create beautiful memories? Don't wait – the
+                <div class="bg-purple rounded p-3 p-lg-5">
+                    <h5 class="text-black mb-3 text-center">Let's Capture Your Story – Book a Session Today</h5>
+                    <p class="mb-0 text-center">Ready to create beautiful memories? Don't wait – the
                         perfect
                         moment is now.<br> Let's schedule your photography session and bring your vision to life.
                     </p>
@@ -274,8 +247,7 @@
             </div>
         </div>
     </div>
-</div>
-      </div>
+</div>      </div>
   <footer>
     <div class="container">
       <div class="footer-inner-content">
@@ -349,9 +321,9 @@
     </div>
     <div class="row justify-content-center py-5 border-top">
       <div class="col-md-8 m-auto">
-        <h6 class="mb-0 mt-md-0 mt-3 ttext-heading fw-medium">Copyright ©
+        <h6 class="mb-0 mt-md-0 mt-3 text-white">Copyright ©
           <script>document.write(new Date().getFullYear())</script> Marvel Creation. All Rights Reserved. &amp; Designed &
-          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatixDesign.</span>
+          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatiixDesign.</span>
         </h6>
       </div>
     </div>
@@ -371,9 +343,5 @@
     <!-- fslightbox Script -->
     <script src="./assets/js/plugins/fslightbox.js?v=1.0.0" defer></script>
     <!-- Slick Slider Script -->
-    <script src="./assets/vendor/slick-slider/slick.min.js"></script>
-    <script src="./assets/vendor/video/video.min.js"></script>
-    <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
-    <script src="./assets/vendor/video/video-player.js"></script>
     <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
