--- a/team.html
+++ b/team.html
@@ -225,9 +225,9 @@
     </div>
     <div class="row justify-content-center py-5 border-top">
       <div class="col-md-8 m-auto">
-        <h6 class="mb-0 mt-md-0 mt-3 ttext-heading fw-medium">Copyright ©
+        <h6 class="mb-0 mt-md-0 mt-3 text-white">Copyright ©
           <script>document.write(new Date().getFullYear())</script> Marvel Creation. All Rights Reserved. &amp; Designed &
-          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatixDesign.</span>
+          Developed by <span class="text-primary fw-bold text-decoration-underline">CreatiixDesign.</span>
         </h6>
       </div>
     </div>
@@ -247,9 +247,5 @@
     <!-- fslightbox Script -->
     <script src="./assets/js/plugins/fslightbox.js?v=1.0.0" defer></script>
     <!-- Slick Slider Script -->
-    <script src="./assets/vendor/slick-slider/slick.min.js"></script>
-    <script src="./assets/vendor/video/video.min.js"></script>
-    <script src="./assets/vendor/videojs-youtube-master/youtube.js"></script>
-    <script src="./assets/vendor/video/video-player.js"></script>
     <script src="./assets/js/marvel-creation.js"></script>  </body>
 </html>
